k8s/disabled/rutorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rutorrent-deployment
  namespace: dvr
  labels:
    app: rutorrent
    argocd.argoproj.io/instance: rutorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rutorrent
  template:
    metadata:
      labels:
        app: rutorrent
    spec:
      containers:
        - name: rutorrent
          image: ghcr.io/crazy-max/rtorrent-rutorrent:latest@sha256:395f32ff75ab84a5615336829c4b846c154113129bc90b911c08a0f5261043f1
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - /usr/local/bin/healthcheck
            initialDelaySeconds: 600
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8080
            - name: xmlrpc
              containerPort: 8000
            - name: rtorrent
              containerPort: 51413
            - name: dht
              containerPort: 6881
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /data
              subPath: rtorrent-config
            - name: temporary-rundir
              mountPath: /var/run/rtorrent
        - name: flood
          image: jesec/flood:latest@sha256:81582c74eba5b787d686c1669b9c4651d88472988e960aafeacd7fd70cdd1dd5
          args: ["--allowedpath", "/data", "--allowedpath", "/var/run/rtorrent"]
          securityContext:
            runAsUser: 911
            runAsGroup: 911
          ports:
            - containerPort: 3000
              name: http-flood
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /data
              subPath: rtorrent-config
            - name: temporary-rundir
              mountPath: /var/run/rtorrent
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /config
            type: DirectoryOrCreate
        - name: temporary-rundir
          emptyDir: {}
