k8s/disabled/rutorrent/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: rutorrent-service
  namespace: dvr
  annotations:
    metallb.universe.tf/allow-shared-ip: rutorrent
  labels:
    app: rutorrent
    argocd.argoproj.io/instance: rutorrent
spec:
  selector:
    app: rutorrent
  type: LoadBalancer
  loadBalancerIP: 192.168.100.252
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: http-flood
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: scgi
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: torrent-tcp
      port: 51413
      targetPort: 51413
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
